gitops_apps/blue-green/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
