gitops_apps/blue-green/base/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapiwebhook-blue
  namespace: bitroid-dev
spec:
  selector:
    app: fastapiwebhook-blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
